[tool.poetry]
name = "mbt-gym"
version = "0.1.0"
description = ""
authors = ["JJJerome"]
readme = "README.md"
packages = [{include = "mbt_gym"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pip = "^23.0.1"
torch = "^1.13.1"
stable-baselines3 = "^1.7.0"
invoke = "^2.0.0"
jupyter = "^1.0.0"
jupyter-nbextensions-configurator = "^0.6.1"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
stochastic = "^0.7.0"
tensorboard = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
